# artist-motion

./: .env.example  .gitignore  README.md  RELEASE.md  ideas.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
api/: .env.example  Cargo.toml  README.md
api/migrations/: 001_init.sql  002_news_comments.sql
api/src/: auth.rs  handlers.rs  main.rs
client/: index.html
client/public/: manifest.webmanifest  robots.txt  sitemap.xml
client/src/: App.tsx  const.ts  index.css
client/src/components/: AnimatedSection.tsx  ImageCarousel.tsx  Navbar.tsx
client/src/data/: testimonials.ts  videos.ts
client/src/lib/: adminApi.ts
client/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Column.tsx  FAQ.tsx  Home.tsx  NewsList.tsx  ServiceDetail.tsx  Testimonials.tsx
docs/: AWS_REDIRECT_WWW_HTTPS.md  DEPLOY_EC2_DETAILED.md  DEPLOY_FIRST_STEPS.md  SPEED_AND_CDN.md
scripts/: deploy-code-only.sh  deploy-update.sh
server/: index.ts
